# macvoice2sshtmux

./: Makefile  README.md  config.example.yaml  pyproject.toml
deploy/hammerspoon/: init.lua
deploy/launchd/: com.oneofth3m.macvoice2sshtmux.plist
src/voice2tmux/: __init__.py  asr_engine.py  audio_capture.py  command_parser.py  ipc_client.py  ipc_server.py  main.py  ssh_mux.py  stream_controller.py  text_normalizer.py  tmux_target.py  tmux_writer.py  transcript_buffer.py
src/voice2tmux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_asr_engine.py  test_cli_e2e_run.py  test_cli_e2e_serve_event.py  test_command_parser.py  test_ipc_server.py  test_text_normalizer.py  test_transcript_buffer.py
